--- a/code/html/side-menu.css
+++ b/code/html/side-menu.css
@@ -29,12 +29,12 @@ This is the parent `<div>` that contains the menu and the content area.
     padding-left: 0;
 }
     #layout.active #menu {
-        left: 150px;
-        width: 150px;
+        left: 160px;
+        width: 160px;
     }
 
     #layout.active .menu-link {
-        left: 150px;
+        left: 160px;
     }
 /*
 The content `<div>` is where all your content goes.
@@ -80,8 +80,8 @@ appears on the left side of the page.
 */
 
 #menu {
-    margin-left: -150px; /* "#menu" width */
-    width: 150px;
+    margin-left: -160px; /* "#menu" width */
+    width: 160px;
     position: fixed;
     top: 0;
     left: 0;
@@ -216,21 +216,21 @@ Hides the menu at `48em`, but modify this based on your app's needs.
     }
 
     #layout {
-        padding-left: 150px; /* left col width "#menu" */
+        padding-left: 160px; /* left col width "#menu" */
         left: 0;
     }
     #menu {
-        left: 150px;
+        left: 160px;
     }
 
     .menu-link {
         position: fixed;
-        left: 150px;
+        left: 160px;
         display: none;
     }
 
     #layout.active .menu-link {
-        left: 150px;
+        left: 160px;
     }
 }
 
@@ -243,6 +243,6 @@ Hides the menu at `48em`, but modify this based on your app's needs.
     */
     #layout.active {
         position: relative;
-        left: 150px;
+        left: 160px;
     }
 }
